# raw

./: Cargo.toml  Dockerfile.api  Dockerfile.db  docker-compose.yml  rustfmt.toml
api/: Cargo.toml
api/src/: main.rs
client/src/: main.rs
database/: Cargo.toml  Dockerfile
database/src/: main.rs
db/: Cargo.toml
db/src/: main.rs
haproxy/: haproxy.cfg
loadbalancer/: Cargo.toml  Dockerfile  nginx.conf
loadbalancer/src/: _.rs  main.rs
server/: Cargo.toml  Dockerfile
server/src/: lib.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs  utils.rs
