[workspace]
resolver = "2"

members = ["shared", "database", "server", "loadbalancer"]

[workspace.dependencies]
bincode = { version = "=2.0.0-rc.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "=2.0.0-alpha.3", features = ["write"] }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
panic = "abort"
