[package]
edition = "2021"
name = "database"
version = "0.1.0"

[dependencies]
bincode = { version = "=2.0.0-rc.3", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
shared = { path = "../shared" }
smallvec = { version = "=2.0.0-alpha.3", features = ["write"] }
# mimalloc = "0.1.39"
# flame = "0.2.2"
