[package]
edition = "2021"
name = "server"
version = "0.1.0"

[dependencies]
async-lock = "3.3.0"
async-std = { version = "1.12", features = ["attributes"] }
bincode = "1.3"
futures = "0.3.30"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
shared = { path = "../shared" }
simd-json = "0.13"
smallvec = "1.13"

# snmalloc-rs = "0.3.4"
# mimalloc = "0.1.39"
