[package]
edition = "2021"
name = "server"
version = "0.1.0"

[dependencies]
async-std = "1.12.0"
bincode = { workspace = true, features = ["serde"] }
futures = "0.3.30"
serde = { workspace = true }
shared = { path = "../shared" }
simd-json = "0.13.8"
smallvec = { workspace = true, features = ["write"] }
